# krew-wasm

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: release.yml  tests.yml
crates/http-wasmtime-kube/: Cargo.toml  README.md
crates/http-wasmtime-kube/src/: lib.rs  request_config.rs  url_rewrite.rs
src/: cli.rs  errors.rs  ls.rs  main.rs  pull.rs  rm.rs  run.rs  store.rs  wasm_host.rs
