[package]
name = "krew-wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls-tls"]
native-tls = ["wasi-outbound-http-wasmtime-kube/native-tls"]
rustls-tls = ["wasi-outbound-http-wasmtime-kube/rustls-tls"]

[workspace]
members = [
  "crates/http-wasmtime-kube",
]

[dependencies]
anyhow                           = "1.0"
clap                             = { version = "4.3", features = [ "derive", "env" ] }
directories                      = "5.0"
kube-conf                        = "0.2"
lazy_static                      = "1.4"
pathdiff                         = "0.2"
policy-fetcher                   = { git = "https://github.com/kubewarden/policy-fetcher", tag = "v0.6.1" }
regex                            = "1"
term-table                       = "1.3"
thiserror                        = "1.0"
tokio                            = "1.31"
tracing                          = "0.1"
tracing-futures                  = "0.2"
tracing-subscriber               = { version = "0.3", features = ["fmt", "env-filter"] }
wasmtime                         = { version = "0.34", features = [ "cache" ] }
wasmtime-wasi                    = "0.34"
wasi-common                      = "0.34"
wasi-cap-std-sync                = "0.34"
wasi-outbound-http-wasmtime-kube = { path = "crates/http-wasmtime-kube", default_features = false }
