[package]
name    = "wasi-outbound-http-wasmtime-kube"
version = "0.1.0"
edition = "2021"
authors = [
  "Radu Matei <radu.matei@fermyon.com>",
  "Flavio Castelli <fcastelli@suse.com>",
]

[lib]
doctest = false

[features]
default = [ "native-tls" ]
native-tls = [ "openssl", "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

[dependencies]
anyhow               = "1.0"
bytes                = "1"
cfg-if               = "1.0"
futures              = "0.3"
http                 = "0.2"
openssl              = { version = "0.10", optional = true }
# need a upstream to tag a new release with this patch https://github.com/seanmonstar/reqwest/pull/1526
reqwest              = { git = "https://github.com/seanmonstar/reqwest.git", rev = "2e5debe24832d4a28a90dbe0eb092eea27386d41", default_features = false, features = [ "json", "blocking" ] }
tokio                = { version = "1", features = [ "full" ] }
tracing              = "0.1"
url                  = "2.2"
uuid                 = { version = "1.4", features = [ "v4" ] }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "f5eed0fb9f1087a2f8889194d0debeeafa789c88" }

[build-dependencies]
wasi-outbound-http-defs = { git = "https://github.com/flavio/wasi-experimental-toolkit", branch = "wasi-outbount-http-add-request-config", default_features = false }
